# spider-cplusplus

./: .clang-format  .devcontainer.json  .dockerignore  .gitattributes  .gitignore  .gitpod.yml  .markdownlint.json  CHANGELOG.md  CMakeLists.txt  Dockerfile  Dockerfile.base  Dockerfile.dev  Dockerfile.release  Makefile  README.md  config.yaml.example  config.yaml.sample  deps.json  docker-compose.yml  package.json  test.cc
.chglog/: CHANGELOG.tpl  config.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  cpp.yml  deps.yml  pr.yml  push.yml  release.yml
docker/: Dockerfile  base.Dockerfile  dev.Dockerfile
etc/: config.yaml.sample
include/: application.h  common.h  config.h  const.h  database.h  error.h  model.h  versions.h
include/application/: prome.h  request.h  server.h
include/database/: database.h  dynamo.h  level.h  mongo.h  mysql.h  postgres.h  redis.h  sqlite3.h
manifests/spider-cplusplus/: Chart.yaml  values.yaml
manifests/spider-cplusplus/charts/: common-1.8.0.tgz  mongodb-10.25.2.tgz  mysql-8.8.6.tgz  postgresql-10.9.5.tgz
manifests/spider-cplusplus/templates/: NOTES.txt  _helpers.tpl  config.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
src/: CMakeLists.txt  application.h  cli.cc  cli.hpp  common.cc  common.h  common.hpp  config.cc  config.h  config.hpp  database.hpp  dbrk.cc  dbsq.cc  error.hpp  model.hpp  request.cc  request.h  request.hpp  server.cc  server.h  server.hpp  spider.cc  versions.cc
src/application/: prome.cc  request.cc  server.cc
src/application/request/: branch.cc  commit.cc  emojis.cc  followx.cc  gitignore.cc  info.cc  license.cc  orgs.cc  request.cc  trending.cc  xrepos.cc
src/database/: dblevel.cc  dbmg.cc.delete  dbrd.cc  dbredis.cc  dbrk.cc  dbsq.cc  dbsqlite.cc  dynamo.cc  level.cc  mongo.cc  mysql.cc  postgres.cc  redis.cc  sqlite.cc
src/database/mongo/: branch.cc  collections.cc  commit.cc  common.cc  emoji.cc  gitignore.cc  initialize.cc  license.cc  mongo.cc  orgs.cc  repo.cc  trending.cc  user.cc
src/inc/: application.h  cli.h  common.h  config.h  database.h  db.h  dbrk.h  dbsq.h  request.h  server.h
src/inc/application/: application.h  request.h  server.h
src/inc/database/: database.h  dbmg.h.delete  dbrd.h  dbrk.h  dbsq.h
src/include/: cli.h  common.h  config.h  error.hpp  model.h
src/include/application/: application.h  request.h
src/include/database/: database.h  dblevel.h  dbmysql.h  dbrd.h  dbredis.h  dbrk.h  dbsqlite.h  dynamo.h  level.h  mongo.h  redis.h  sqlite.h  sqlite3.h
test/: create_collection.cc  create_x_collection.cc  ensure_index.cc  list_x_random.cc
